left it at a wierd spot where the numbers go in the display, clear and clearAll works figuring out how to work out operator and equals to button

--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,10 @@ button{
 .calc{
     flex-grow: 2;
 }
+.display{
+    align-self: end;
+    height: 1.3rem;
+    /* text-anchor: end; */
+    direction: rtl;
+
+}
