--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,22 @@
+html{
+    height: 100%;
+}
+
 body{
-    background-color: #2c3e50;
+    background-color: #E14D2A;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
-    /* font-size: 5rem; */
+    align-items: center;
+    height:97%;
 }
 
 #calculator{
     display: flex;
     flex-direction: column;
-    /* height: min-content; */
-    width: 35%;
-    /* width: min-content; */
-    border: 7px solid #7f8c8d;
+    width: 30%;
+    aspect-ratio: 1/1.2;
+    background-color: #144272;
+    border: 7px solid #0A2647;
     gap: 1rem;
 
 
@@ -20,22 +24,25 @@ body{
 
 .buttons{
 
-    /* border: 1px red; */
     display: flex;
     flex-wrap: wrap; 
+    margin: 2rem;
     /* gap: 1rem; */
     /* box-sizing: border-box; */
+    /* gap: 1px; */
 }
 button{
+
     font-weight: 900;
     font-size: 2rem;
     width: 25%;
-    /* flex: 1; */
     flex-shrink: 0;
-    background-color: #34495e;
-    border: 1px solid #95a5a6;
-    /* color: #FE9677; */
-    /* width: 10rem; */
+    background-color: #144272;
+    border: 1px solid #2C74B3;
+    border-radius: 5px ;
+    box-sizing: border-box;
+    padding: 15px;
+    /* margin: 1px;  */
 
 
 }
@@ -46,14 +53,12 @@ button{
 
 
 .display{
-    font-size: 2rem;
+    margin: 2rem;
+    font-size: 3rem;
+    /* align-self: end; */
+    height: 3rem;
+    border: 3px solid #2C74B3;
+    text-align: end;
 
-    align-self: end;
-    height: 1.3rem;
-    /* background: transparent; */
-    /* border: 3px solid #95a5a6; */
-
-    /* text-anchor: end; */
-    /* direction: rtl; */
 
 }
