--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,16 @@ button{
     box-sizing: border-box;
     padding: 15px;
     /* margin: 1px;  */
+    opacity: 0.8;
 
+
+}
+
+button:hover{
+    opacity: 1;
+    background-color: #0A2647;
+    /* color: red; */
+    transition: 0.3s;
 
 }
 
